# node

./: .clang-format  .gitignore  .gitmodules  README.md  generatePinHeader.sh  pins.txt
Hardware/: node.brd  node.sch
Hardware/Production/: bom.csv  cpl.csv
Software/: .gitignore  CMakeLists.txt  flashNode.sh
Software/lib/: CMakeLists.txt
Software/lib/NodeLib/: CMakeLists.txt  EChannelId.h  EOperation.h  EPinMode.h  ErrorHandler.cpp  ErrorHandler.h  IVariableHandler.h  Node.cpp  Node.h  NodeComm.cpp  NodeMaster.cpp  NodeMaster.h  id.h
Software/lib/NodeLib/NodeLib/: EOperation.h  EPinMode.h  IVariableHandler.h  NodeComm.cpp  NodeComm.h  NodeMaster.cpp  NodeMaster.h  id.cpp  id.h
Software/pins/: CMakeLists.txt  pins.txt
Software/src/: Channel.cpp  Channel.h  ChannelManager.cpp  ChannelManager.h  Node.cpp  NodeSketch.cpp  ServoChannel.cpp  ServoChannel.h
